css styling/global.css
*{
    margin: 0;
    padding: 0;
}
.main{
    background-color: rgb(193, 255, 255);
    width: 100vw;
    height: 100vh;
    display: flex;
    
}

.indexcard{
    background-color: white;
    width: 500px;
    height: 340px;
    margin: auto;
    border: 2px solid rgb(234, 237, 236);
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.head1{
    
    justify-self: top;
    padding: 10px;
    margin: 10px;
    margin-bottom: 5px;
}

.head2{
    padding: 5px;
    margin-bottom: 10px;
}

.row{
    display: flex;
    justify-content: center;
}

.btn{
     width: 200px;
    height: 50px;
    padding: 12px;
    margin: 10px;
    font-size: 18px;
    color: white;
    background-color: rgb(17, 64, 253);
    border: 2px solid rgb(234, 237, 236);
    border-radius: 6px;
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-self: center;
}

